tests/resources/invalid/type/function/return_illegal.mamba
def f(a: Int) => return a
